# k1code

./: .gitignore  AGENTS.md  KEYBINDINGS.md  LICENSE  README.md  REMOTE.md  package.json  turbo.json  vitest.config.ts
.docs/: architecture.md  codex-prerequisites.md  encyclopedia.md  provider-architecture.md  quick-start.md  runtime-modes.md  scripts.md  workspace-layout.md
.github/workflows/: release.yml
apps/desktop/: package.json  tsdown.config.ts  turbo.jsonc
apps/desktop-tauri/: package.json  tsconfig.json  turbo.jsonc
apps/desktop-tauri/scripts/: smoke-test.mjs
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/capabilities/: default.json
apps/desktop-tauri/src-tauri/src/: main.rs
apps/desktop/resources/: icon.icns
apps/desktop/scripts/: dev-electron.mjs  electron-launcher.mjs
apps/desktop/src/: main.ts  preload.ts  rotatingFileSink.test.ts  runtimeArch.ts  syncShellEnvironment.ts  updateMachine.ts  updateState.test.ts  updateState.ts
apps/marketing/: package.json
apps/server/: package.json  tsdown.config.ts
apps/server/integration/: OrchestrationEngineHarness.integration.ts  TestProviderAdapter.integration.ts  orchestrationEngine.integration.test.ts  providerService.integration.test.ts
apps/server/scripts/: cli.ts
apps/web/: index.html  package.json  vite.config.ts
docs/: release.md
scripts/: build-desktop-artifact.ts  dev-runner.test.ts  dev-runner.ts  merge-mac-update-manifests.test.ts  package.json  release-smoke.ts  sync-vscode-icons.mjs
scripts/lib/: brand-assets.ts
(+265 files in other folders)
