[package]
name = "k1-code-tauri"
version = "0.2.0"
description = "K1 Code desktop shell (Tauri)"
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6.0.0"
rand = "0.8.5"
rfd = "0.15.4"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.3.1" }
url = "2.5.4"
webbrowser = "1.0.6"
